--- a/store.html
+++ b/store.html
@@ -1,33 +1,80 @@
 
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
 <meta charset="UTF-8">
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>EPÒK | Patch Baby — Boy World</title>
-
+<title>EPÒK | Universal Page</title>
 
 <style>
-
 * { margin:0; padding:0; box-sizing:border-box; }
-
 
 html, body {
     width:100%;
     height:100%;
     background:#000;
-    overflow:hidden;
+    color:#f2f2f2;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    overflow:hidden;
 }
 
+/* ================= TOP NAV (VERBATIM) ================= */
+.top-nav {
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:64px;
+    background:rgba(0,0,0,0.85);
+    backdrop-filter:blur(10px);
+    z-index:1000;
+    border-bottom:1px solid rgba(212,175,55,0.25);
+}
+
+.nav-scroll {
+    width:100%;
+    height:100%;
+    overflow-x:auto;
+    overflow-y:hidden;
+    white-space:nowrap;
+    -webkit-overflow-scrolling:touch;
+    padding:0 6vw;
+    display:flex;
+    align-items:center;
+}
+
+.nav-scroll::-webkit-scrollbar { height:0px; }
+.nav-scroll { scrollbar-width:none; }
+
+.nav-links {
+    display:inline-flex;
+    gap:26px;
+    align-items:center;
+}
+
+.nav-links a {
+    text-decoration:none;
+    color:#e8e4d8;
+    font-size:0.82rem;
+    letter-spacing:0.22em;
+    text-transform:uppercase;
+    padding:8px 4px;
+    opacity:0.85;
+}
+
+.nav-links a:hover {
+    color:#f3d688;
+    opacity:1;
+}
+
+.nav-links a.featured {
+    opacity:1;
+    border:1px solid rgba(212,175,55,0.85);
+    padding:8px 12px;
+    color:#f3d688;
+}
 
 /* ============ DOUBLE ROYAL FRAME (LOCKED) ============ */
-
 .page-frame-outer {
     position:fixed;
     inset:0;
@@ -35,8 +82,8 @@ html, body {
     border:2px solid rgba(212,175,55,0.65);
     pointer-events:none;
     z-index:50;
+    overflow:hidden;
 }
-
 
 .page-frame-outer::before,
 .page-frame-outer::after {
@@ -46,38 +93,32 @@ html, body {
     bottom:22px;
     width:22px;
     writing-mode:vertical-rl;
+    text-orientation:mixed;
     font-size:0.65rem;
     letter-spacing:0.35em;
     color:#ffffff;
     white-space:nowrap;
 }
 
-
 .page-frame-outer::before {
     left:1px;
     animation:leftScroll 45s linear infinite;
 }
-
 
 .page-frame-outer::after {
     right:9px;
     animation:rightScroll 45s linear infinite;
 }
 
-
 @keyframes leftScroll {
     from { transform:translateY(100%); }
-    to { transform:translateY(-100%); }
+    to   { transform:translateY(-100%); }
 }
-
 
 @keyframes rightScroll {
     from { transform:translateY(-100%); }
-    to { transform:translateY(100%); }
+    to   { transform:translateY(100%); }
 }
-
-
-/* Bottom Arabic */
 
 .arabic-border {
     position:absolute;
@@ -92,83 +133,86 @@ html, body {
     text-align:center;
 }
 
-
 .arabic-border span {
     display:inline-block;
     padding-left:100%;
     animation:arabic-scroll 18s linear infinite;
 }
 
-
 @keyframes arabic-scroll {
     from { transform:translateX(0); }
     to { transform:translateX(-100%); }
 }
 
-
-/* ============ WORLD STAGE ============ */
-
-.world-stage {
+/* ============ PAGE SCROLLER (LOCKED) ============ */
+.page-scroll {
     position:fixed;
     inset:0;
+    overflow-y:auto;
+    overflow-x:hidden;
     z-index:1;
+    padding:22px;
 }
 
-
-.world-base,
-.world-overlay {
-    position:absolute;
-    inset:0;
-    width:100%;
-    height:100%;
-    object-fit:contain;
+.page-inner {
+    min-height:calc(100vh - 44px);
+    border:1px solid rgba(212,175,55,0.35);
+    box-shadow:
+        inset 0 0 0 1px rgba(212,175,55,0.18),
+        0 40px 120px rgba(0,0,0,0.95);
+    background:#000;
+    position:relative;
+    padding:88px 6vw 140px;
 }
 
+/* ============ MOBILE (LOCKED) ============ */
+@media (max-width:768px) {
 
-/* WORLD NAV (IN-WORLD ONLY) */
+    .page-scroll { padding:14px; }
+    .page-inner { padding:78px 3vw 120px; }
 
-.world-nav {
-    position:absolute;
-    bottom:12%;
-    width:100%;
-    text-align:center;
-    z-index:10;
+    .page-frame-outer { padding:14px; }
+
+    .page-frame-outer::before,
+    .page-frame-outer::after {
+        font-size:0.55rem;
+        letter-spacing:0.30em;
+    }
+
+    .arabic-border {
+        font-size:0.6rem;
+        letter-spacing:0.30em;
+    }
 }
-
-
-.world-nav span {
-    font-size:0.7rem;
-    letter-spacing:0.35em;
-    color:#ffffff;
-    cursor:pointer;
-    opacity:0.75;
-    transition:opacity .3s ease;
-}
-
-
-.world-nav span:hover {
-    opacity:1;
-}
-
-
-/* FADE */
-
-.fade-out {
-    animation:fadeOut 1.2s forwards;
-}
-
-
-@keyframes fadeOut {
-    to { opacity:0; }
-}
-
 </style>
-
 </head>
-
 
 <body>
 
+<nav class="top-nav">
+    <div class="nav-scroll">
+        <div class="nav-links">
+            <a href="home.html">Home</a>
+            <a href="movement.html">Movement</a>
+            <a href="patchbaby.html">Patch Baby</a>
+            <a href="book.html">The Book</a>
+            <a href="store.html">Store</a>
+            <a href="checkout.html">Checkout</a>
+            <a href="about.html">About</a>
+            <a class="featured" href="signature-apparel-premiere.html">Featured Apparel · Premiere</a>
+        </div>
+    </div>
+</nav>
+
+<div class="page-scroll">
+    <div class="page-inner">
+
+        <!-- PAGE CONTENT START -->
+        <!-- SECTIONS WILL BE INSERTED HERE -->
+        <!-- PAGE CONTENT END -->
+
+    </div>
+</div>
 
 <div class="page-frame-outer">
     <div class="arabic-border">
@@ -179,39 +223,5 @@ html, body {
     </div>
 </div>
 
-
-<div class="world-stage" id="worldStage">
-
-    <!-- BOY WORLD BASE (AS-IS) -->
-    <img src="images/24.png" class="world-base" alt="Boy World">
-
-    <!-- BOY WORLD OVERLAY (AS-IS) -->
-    <img src="images/24n2.png" class="world-overlay" alt="Boy World Logo">
-
-    <!-- IN-WORLD NAV (NO TABS) -->
-    <div class="world-nav">
-        <span id="toGirl">← ENTER GIRL WORLD</span>
-    </div>
-
-</div>
-
-
-<script>
-
-const stage = document.getElementById("worldStage");
-const toGirl = document.getElementById("toGirl");
-
-
-toGirl.addEventListener("click", () => {
-    stage.classList.add("fade-out");
-    setTimeout(() => {
-        window.location.href = "patchbabyworld1.html";
-    }, 1200);
-});
-
-</script>
-
-
 </body>
-
 </html>
