--- a/store.html
+++ b/store.html
@@ -206,6 +206,121 @@ html, body {
 
 <div class="page-scroll">
     <div class="page-inner">
+<!-- ================= WINTER DROP ================= -->
+<section id="winter-drop" class="store-section">
+
+    <!-- ===== BANNER PLACEHOLDER ===== -->
+    <div class="section-banner">
+        WINTER DROP — BANNER ART PLACEHOLDER
+    </div>
+
+    <!-- ===== PATCH BABY ===== -->
+    <div class="section-bg">PATCH BABY — BACKGROUND ART PLACEHOLDER</div>
+
+    <div class="product-grid">
+
+        <!-- PATCH BABY JOGGER — WOMEN -->
+        <div class="product-tile" data-modal="patchbaby-jogger-women">
+            <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
+            <div class="card-meta">
+                <h4>PATCH BABY JOGGER — WOMEN</h4>
+                <div class="price-row">
+                    <div class="price">$245.00 SET</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- PATCH BABY JOGGER — MEN -->
+        <div class="product-tile" data-modal="patchbaby-jogger-men">
+            <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
+            <div class="card-meta">
+                <h4>PATCH BABY JOGGER — MEN</h4>
+                <div class="price-row">
+                    <div class="price">$235.00 SET</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- PATCH BABY STREETWEAR — WOMEN -->
+        <div class="product-tile" data-modal="patchbaby-street-women">
+            <img src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodiefront.png">
+            <div class="card-meta">
+                <h4>PATCH BABY STREETWEAR — WOMEN</h4>
+                <div class="price-row">
+                    <div class="price">$255.00 SET</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- PATCH BABY STREETWEAR — MEN -->
+        <div class="product-tile" data-modal="patchbaby-street-men">
+            <img src="ModelPictures/patchbabysstreetwear/Pbmenshoodiefront.png">
+            <div class="card-meta">
+                <h4>PATCH BABY STREETWEAR — MEN</h4>
+                <div class="price-row">
+                    <div class="price">$255.00 SET</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- ===== PANTHERS & VAMPIRES BANNER ===== -->
+    <div class="section-banner" style="margin-top:120px;">
+        PANTHERS & VAMPIRES — BANNER ART PLACEHOLDER
+    </div>
+
+    <div class="section-bg">PANTHERS & VAMPIRES — BACKGROUND ART PLACEHOLDER</div>
+
+    <div class="product-grid">
+
+        <!-- P&V JOGGER — WOMEN -->
+        <div class="product-tile" data-modal="pv-jogger-women">
+            <img src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiressweatshirtfront.png">
+            <div class="card-meta">
+                <h4>PANTHERS & VAMPIRES JOGGER — WOMEN</h4>
+                <div class="price-row">
+                    <div class="price">$245.00 SET</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- P&V JOGGER — MEN -->
+        <div class="product-tile" data-modal="pv-jogger-men">
+            <img src="ModelPictures/Panthers&vampiresjogger/v&pmenssweatshirtfront.png">
+            <div class="card-meta">
+                <h4>PANTHERS & VAMPIRES JOGGER — MEN</h4>
+                <div class="price-row">
+                    <div class="price">$235.00 SET</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- P&V STREETWEAR — WOMEN -->
+        <div class="product-tile" data-modal="pv-street-women">
+            <img src="ModelPictures/Panthers&vampiresstreewear/P&Vstreetwearcrophoodiefront.png">
+            <div class="card-meta">
+                <h4>PANTHERS & VAMPIRES STREETWEAR — WOMEN</h4>
+                <div class="price-row">
+                    <div class="price">$255.00 SET</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- P&V STREETWEAR — MEN -->
+        <div class="product-tile" data-modal="pv-street-men">
+            <img src="ModelPictures/Panthers&vampiresstreewear/P&Vhoodiefront.png">
+            <div class="card-meta">
+                <h4>PANTHERS & VAMPIRES STREETWEAR — MEN</h4>
+                <div class="price-row">
+                    <div class="price">$255.00 SET</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</section>
 
         <!-- PAGE CONTENT START -->
         <!-- SECTIONS WILL BE INSERTED HERE -->
