--- a/store.html
+++ b/store.html
@@ -322,7 +322,220 @@ html, body {
 
 </section>
 
-        <!-- PAGE CONTENT START -->
+     <!-- ================= WINTER DROP ================= -->
+<section id="winter-drop" class="store-section">
+
+    <!-- ===== WINTER DROP BANNER PLACEHOLDER ===== -->
+    <div class="section-banner">WINTER DROP — BANNER PLACEHOLDER</div>
+
+    <!-- ======================================================
+         PATCH BABY — JOGGER
+         ====================================================== -->
+    <div class="section-bg">PATCH BABY JOGGER — BACKGROUND ART PLACEHOLDER</div>
+
+    <div class="product-grid two-col">
+
+        <!-- WOMEN -->
+        <div class="product-column">
+            <h3 class="column-title">WOMEN</h3>
+
+            <div class="product-tile" data-modal="pb-jogger-women-pompom">
+                <img src="ModelPictures/patchbabysjogger/pompombeanie.png">
+                <div class="card-meta">
+                    <h4>POM POM BEANIE</h4>
+                    <div class="price">$55.00</div>
+                </div>
+            </div>
+
+            <div class="product-tile" data-modal="pb-jogger-women-sweatshirt">
+                <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
+                <div class="card-meta">
+                    <h4>SWEATSHIRT</h4>
+                    <div class="price">$100.00</div>
+                </div>
+            </div>
+
+            <div class="product-tile" data-modal="pb-jogger-women-joggers">
+                <img src="ModelPictures/patchbabysjogger/joggerpantsfront.png">
+                <div class="card-meta">
+                    <h4>JOGGER PANTS</h4>
+                    <div class="price">$90.00</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- MEN -->
+        <div class="product-column">
+            <h3 class="column-title">MEN</h3>
+
+            <div class="product-tile" data-modal="pb-jogger-men-beanie">
+                <img src="ModelPictures/patchbabysjogger/beanie.png">
+                <div class="card-meta">
+                    <h4>BEANIE</h4>
+                    <div class="price">$45.00</div>
+                </div>
+            </div>
+
+            <div class="product-tile" data-modal="pb-jogger-men-sweatshirt">
+                <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
+                <div class="card-meta">
+                    <h4>SWEATSHIRT</h4>
+                    <div class="price">$100.00</div>
+                </div>
+            </div>
+
+            <div class="product-tile" data-modal="pb-jogger-men-joggers">
+                <img src="ModelPictures/patchbabysjogger/joggerpantsfront.png">
+                <div class="card-meta">
+                    <h4>JOGGER PANTS</h4>
+                    <div class="price">$90.00</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- ======================================================
+         PATCH BABY — STREETWEAR
+         ====================================================== -->
+    <div class="section-bg">PATCH BABY STREETWEAR — BACKGROUND ART PLACEHOLDER</div>
+
+    <div class="product-grid two-col">
+
+        <!-- WOMEN -->
+        <div class="product-column">
+            <h3 class="column-title">WOMEN</h3>
+
+            <div class="product-tile" data-modal="pb-street-women-cap">
+                <img src="ModelPictures/patchbabysstreetwear/pbfittedcap1.png">
+                <div class="card-meta">
+                    <h4>FITTED CAP</h4>
+                    <div class="price">$65.00</div>
+                </div>
+            </div>
+
+            <div class="product-tile" data-modal="pb-street-women-crop">
+                <img src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodiefront.png">
+                <div class="card-meta">
+                    <h4>CROP HOODIE</h4>
+                    <div class="price">$110.00</div>
+                </div>
+            </div>
+
+            <div class="product-tile" data-modal="pb-street-women-yoga">
+                <img src="ModelPictures/patchbabysstreetwear/Pbwomansyogafront.png">
+                <div class="card-meta">
+                    <h4>YOGA PANTS</h4>
+                    <div class="price">$80.00</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- MEN -->
+        <div class="product-column">
+            <h3 class="column-title">MEN</h3>
+
+            <div class="product-tile" data-modal="pb-street-men-snapback">
+                <img src="ModelPictures/patchbabysstreetwear/Pbsnapback1.png">
+                <div class="card-meta">
+                    <h4>SNAPBACK</h4>
+                    <div class="price">$65.00</div>
+                </div>
+            </div>
+
+            <div class="product-tile" data-modal="pb-street-men-hoodie">
+                <img src="ModelPictures/patchbabysstreetwear/Pbmenshoodiefront.png">
+                <div class="card-meta">
+                    <h4>HOODIE</h4>
+                    <div class="price">$110.00</div>
+                </div>
+            </div>
+
+            <div class="product-tile" data-modal="pb-street-men-shorts">
+                <img src="ModelPictures/patchbabysstreetwear/Pbmensshortsfront.png">
+                <div class="card-meta">
+                    <h4>SHORTS</h4>
+                    <div class="price">$80.00</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- ======================================================
+         PANTHERS & VAMPIRES — BANNER PLACEHOLDER
+         ====================================================== -->
+    <div class="section-banner">PANTHERS & VAMPIRES — BANNER PLACEHOLDER</div>
+
+    <!-- ======================================================
+         PANTHERS & VAMPIRES — JOGGER
+         ====================================================== -->
+    <div class="section-bg">PANTHERS & VAMPIRES JOGGER — BACKGROUND ART PLACEHOLDER</div>
+
+    <div class="product-grid two-col">
+
+        <!-- WOMEN -->
+        <div class="product-column">
+            <h3 class="column-title">WOMEN</h3>
+
+            <div class="product-tile" data-modal="pv-jogger-women-beanie">
+                <img src="ModelPictures/Panthers&vampiresjogger/V&ppompombeanie.png">
+                <div class="card-meta">
+                    <h4>POM POM BEANIE</h4>
+                    <div class="price">$55.00</div>
+                </div>
+            </div>
+
+            <div class="product-tile" data-modal="pv-jogger-women-sweatshirt">
+                <img src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiressweatshirtfront.png">
+                <div class="card-meta">
+                    <h4>SWEATSHIRT</h4>
+                    <div class="price">$100.00</div>
+                </div>
+            </div>
+
+            <div class="product-tile" data-modal="pv-jogger-women-joggers">
+                <img src="ModelPictures/Panthers&vampiresjogger/Panthers&vampiresgirlsjoggersfront.png">
+                <div class="card-meta">
+                    <h4>JOGGER PANTS</h4>
+                    <div class="price">$90.00</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- MEN -->
+        <div class="product-column">
+            <h3 class="column-title">MEN</h3>
+
+            <div class="product-tile" data-modal="pv-jogger-men-beanie">
+                <img src="ModelPictures/Panthers&vampiresjogger/v&pbeanie.png">
+                <div class="card-meta">
+                    <h4>BEANIE</h4>
+                    <div class="price">$45.00</div>
+                </div>
+            </div>
+
+            <div class="product-tile" data-modal="pv-jogger-men-sweatshirt">
+                <img src="ModelPictures/Panthers&vampiresjogger/v&pmenssweatshirtfront.png">
+                <div class="card-meta">
+                    <h4>SWEATSHIRT</h4>
+                    <div class="price">$100.00</div>
+                </div>
+            </div>
+
+            <div class="product-tile" data-modal="pv-jogger-men-joggers">
+                <img src="ModelPictures/Panthers&vampiresjogger/v&pmensjoggerfront.png">
+                <div class="card-meta">
+                    <h4>JOGGER PANTS</h4>
+                    <div class="price">$90.00</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+   <!-- PAGE CONTENT START -->
         <!-- SECTIONS WILL BE INSERTED HERE -->
         <!-- PAGE CONTENT END -->
 
